# knowledge_server

./: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example  index.html  main.py  package.json  pyproject.toml  tsconfig.json  tsconfig.vite-config.json  vite.config.ts  vue.config.js
.github/workflows/: Cleanup-Docker-Images.yml  Upload-Latest-Release-Tag.yml  delete-docker-image.yml  docker-image.yml
api/: crud.py  database.py  main.py
api/routes/: auth.py  numbers.py  talking_points.py
src/: App.vue
src/components/: ContactPerson.vue  ExcelUploader.vue
src/components/ContactsView/: ContactsView.vue
src/components/CopywriterView/: CopywriterView.vue
src/components/auth/: LoginForm.vue  RegisterForm.vue
src/components/dashboard/: MonthlyEarnings.vue  ProductCards.vue  ProductPerformance.vue  SalesOverview.vue  YearlyBreakup.vue
src/components/database/: ProductPerformance.vue
src/components/shared/: UiParentCard.vue  VersionUpLoad.vue  WidgetUpLoad.vue
src/data/dashboard/: dashboardData.ts
src/data/database/: databaseData.ts
src/layouts/full/: FullLayout.vue  Main.vue
src/plugins/: vuetify.ts
src/router/: AuthRoutes.ts  MainRoutes.ts  index.ts
src/services/: axiosInstance.js
src/theme/: LightTheme.ts
src/types/dashboard/: index.ts
src/types/database/: index.ts
src/types/themeTypes/: ThemeType.ts
src/utils/: api.js  axios.ts  config.ts  utils.js
src/views/auth/: Login.vue  Register.vue
src/views/components/: Shadow.vue  Typography.vue
src/views/dashboard/: index.vue
(+17 files in other folders)
