[tool.poetry]
name = "knowledge_server_api"
version = "1.0.0"
description = ""
authors = ["kalicyh <34980061+kaliCYH@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
